--- a/Pocket-Pitch/package.json
+++ b/Pocket-Pitch/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.0.0",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.16.7",
+    "workbox-window": "^7.0.0"
   }
 }
